[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Fences/fence_x-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/Fences/FenceX.gd" type="Script" id=2]
[ext_resource path="res://sounds/gate.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 13 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26, 28 )

[node name="FenceY" type="YSort" groups=[
"fence",
]]
script = ExtResource( 2 )

[node name="TopFence" type="Node2D" parent="."]
position = Vector2( 0, -6.59445 )

[node name="Sprite" type="Sprite" parent="TopFence"]
position = Vector2( 0, 6.59445 )
texture = ExtResource( 1 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 128, 64 )

[node name="TopGate" type="Node2D" parent="."]
position = Vector2( 0, -5.36007 )

[node name="Sprite" type="Sprite" parent="TopGate"]
position = Vector2( 2.85433, 17.6608 )
texture = ExtResource( 1 )
offset = Vector2( -2.85433, -12.3007 )
hframes = 2
region_enabled = true
region_rect = Rect2( 256, 0, 128, 64 )

[node name="BottomGate" type="Node2D" parent="."]
position = Vector2( 0, 15.6785 )

[node name="Sprite" type="Sprite" parent="BottomGate"]
position = Vector2( 0, -15.6785 )
texture = ExtResource( 1 )
hframes = 2
region_enabled = true
region_rect = Rect2( 128, 0, 128, 64 )

[node name="BottomFence" type="Node2D" parent="."]
position = Vector2( 0, 31.8208 )

[node name="Sprite" type="Sprite" parent="BottomFence"]
position = Vector2( 0, -31.8208 )
texture = ExtResource( 1 )
hframes = 2
region_enabled = true
region_rect = Rect2( 384, 0, 128, 64 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 23 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -19 )
shape = SubResource( 2 )

[node name="GateShape" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
